1999-05-24  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* Makefile.am (noinst_LTLIBRARIES): Switch from lib_LTLIBRARIES.

1999-05-24  Alex Lancaster  <alex@santafe.edu>

	* make-h2x: Modify sed script that generates the .xm+ file, to
	only output lines that have id<{Symbol,Warning,Error,Event}> if
	prefaced by `extern'.  This avoids the problem of
	misinterpretation of methods that take or return an argument that
	have casts to id<{Symbol,Warning,Error,Event}>, as symbols.

1999-05-20  Alex Lancaster  <alex@santafe.edu>

	* directory.[hm]: Protect Java-specific code with HAVE_JDK
	#ifdef's.

	* defobj.h: Declare extern {lisp,hdf5}AppArchiver.
	(Archiver): Add -setDefaultApp{Lisp,HDF5}Path to protocol
	definition.

	* defobj.m (initDefobj): Create singleton instances of
	{lisp,hdf5}AppArchiver.

	* Archiver.[hm] ([Archiver_c -setDefaultAppLispPath]): New method
	to set the default path name for the lispAppArchiver, use
	defaultAppPath.
	
	* Archiver.[hm] ([Archiver_c -setDefaultAppHDF5Path]): Likewise
	for hdf5AppArchiver, use defaultAppPath.
	
	* Archiver.m: (defaultAppPath): Function to generate the
	application-specific Archiver pathname.

1999-05-20  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* DefObject.m ([Object_s +getName]): Keep this method.  Some
	apps depend on it.

1999-05-19  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* Makefile.am (JAVAINCLUDES): Remove java/c include.
	(SRC): Add directory.m and JavaProxy.m.
	(defobj_HEADERS): Add directory.h and JavaProxy.h.

	* JavaProxy.[hm], directory.[hm]: Moved here from java/c.

1999-05-17  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* internal.m (lisp_output_type): Add support for long long and
	unsigned long long, but disable it pending autoconf support for %lld.

1999-05-11  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* FCall.m ([FCall_c -getRetVal:buf:]): For builtin_apply workaround
	support, handle char, short, and long.  char and short are special